# rust-algorithms

./: .gitignore  README.md  cargo.toml
ai_search/: Cargo.toml
ai_search/src/: beam_search.rs  best_first.rs  ida_star.rs  lib.rs  mcts.rs  minimax.rs
backtracking/: Cargo.toml
backtracking/src/: lib.rs  n_queens.rs  permutations_and_combinations.rs  sudoku_solver.rs
crypto/: Cargo.toml
crypto/src/: aes.rs  diffie_hellman.rs  lib.rs  rsa.rs
distributed/: Cargo.toml
distributed/src/: consistent_hashing.rs  jump_consistent_hash.rs  lib.rs  merkle_tree.rs  raft.rs  rendezvous_hashing.rs  vector_clock.rs
divide_and_conquer/: Cargo.toml
divide_and_conquer/src/: fft.rs  lib.rs  merge_sort.rs  quick_sort.rs
dynamic_programming/: Cargo.toml
dynamic_programming/src/: coin_change.rs  edit_distance.rs  fibonacci_with_memoization.rs  knapsack_problem.rs  lcs.rs  lib.rs  lis.rs  mcm.rs
geometry/: Cargo.toml
geometry/src/: convex_hull.rs  lib.rs  line_intersection.rs  sweep_line.rs
gnn/: Cargo.toml
gnn/src/: graph_attention.rs  graphsage_sampling.rs  laplacian.rs  lib.rs  message_passing.rs  pagerank.rs  random_walk.rs
graphs/: Cargo.toml
graphs/src/: a_star.rs  bellman_ford.rs  bfs.rs  d_star_lite.rs  dfs.rs  dijkstra.rs  floyd_warshall.rs  jps.rs  kruskal.rs  kruskal_named.rs  lib.rs  prim.rs  (+3 more)
greedy/: Cargo.toml
hashing/: Cargo.toml
llm_primitives/: Cargo.toml
mapf/: Cargo.toml
ml_basics/: Cargo.toml
moe/: Cargo.toml
parallel/: Cargo.toml
playground/: Cargo.toml
rl/: Cargo.toml
sampling/: Cargo.toml
searching/: Cargo.toml
shared_utils/: Cargo.toml
sorting/: Cargo.toml
strings/: Cargo.toml
vector_search/: Cargo.toml
(+90 files in other folders)
