[package]
name = "playground"
version = "0.1.0"
edition = "2024"

[dependencies]
sorting = { path = "../sorting" }
searching = { path = "../searching" }
graphs = { path = "../graphs" }
dynamic_programming = { path = "../dynamic_programming" }
greedy = { path = "../greedy" }
divide_and_conquer = { path = "../divide_and_conquer" }
backtracking = { path = "../backtracking" }
hashing = { path = "../hashing" }
strings = { path = "../strings" }
geometry = { path = "../geometry" }
crypto = { path = "../crypto" }
ml_basics = { path = "../ml_basics" }
shared_utils = { path = "../shared_utils" }
ai_search = { path = "../ai_search" }
distributed = { path = "../distributed" }
gnn = { path = "../gnn" }
llm_primitives = { path = "../llm_primitives" }
mapf = { path = "../mapf" }
moe = { path = "../moe" }
parallel = { path = "../parallel" }
rl = { path = "../rl" }
sampling = { path = "../sampling" }
vector_search = { path = "../vector_search" }
